# KnowLiEdge

./: .cursorignore  .env.example  .gitignore  AliAIPlatfor.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: llm_tasks.json
configs/: default.example.yaml  default.yaml
sandbox/configs/: ieee_one.yaml  ieee_one_index.yaml  sandbox.yaml
scripts/: __init__.py  _read_five_vaults.py  _smoke_split_references.py  batch_document_profile_dashscope.py  build_citation_graph.py  build_fts.py  build_gan_on_si_modeling_review_zh.py  detect_title_mismatches.py  download_mineru_models.py  enrich_metadata.py  expand_citation_network.py  fix_opencl_conda_noise.ps1  fix_vault_image_paths.py  fts_docmeta.py  fts_inspect.py  fts_search.py  gaas_article_sandbox_once.py  ieee_xplore_pdfs.py  import_mineru_cli_outputs.py  index_markdown.py  list_documents_metadata.py  mark_radar_local_presence.py  pdf_to_md.py  plan_workflow.py  report_fused_search_zh.py  review_citation_expansion.py  run_chroma_http_server.py  run_embedding_server.py  run_hybrid_search.py  run_llm_task.py  run_local_fused_search.py  run_mcp_server.py  run_mcp_server_sandbox.py  run_venue_radar.py  smoke_document_profile_chat.py  smoke_keyword_chat.py  stats_watch_state.py  topic_discovery.py  verify_chroma.py  viz_citation_network.py  (+1 more)
src/knotliedge/: __init__.py
src/knotliedge/chunking/: __init__.py  md_chunker.py
src/knotliedge/citation_graph/: hitl.py  (+6 more)
templates/openai_chat/: document_profile_compress.json  local_research_keyword.json  local_research_keyword_en_terms.json  quick_translate_en.json
(+78 files in other folders)
